[package]
name = "qvault"
version = "0.1.0"
edition = "2021"

[dependencies]

# randomness
rand = { version = "0.8.5" }

# ed25519
ed25519-dalek = { version = "2.1.1" }

# kyber
pqc_kyber = { version = "0.7.1", features = ["kyber1024"] }

# encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.13" }

# crypto
aes-gcm = "0.9.0"
sha2 = { version = "0.10" }
hmac = { version = "0.12.1" }